# AI-Chatbot

./: .gitignore  Dockerfile  GOOGLE_AI_SETUP.md  README.md  app.py  config.env.example  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py
app/agents/: __init__.py
app/api/: __init__.py  admin.py  analytics.py
app/database/: __init__.py  base.py  connection.py
app/rag/: __init__.py
src/: config.py
src/agents/: analytics_agent.py  api_execution_agent.py  base_agent.py  document_qa_agent.py  form_generation_agent.py
src/controller/: agent_controller.py
src/rag/: document_processor.py  retriever.py  vector_store.py
src/storage/: __init__.py  tenant_manager.py
